# gpt_sovits_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/GPTSovits/: AudioTools.h  CNBertModel.h  GPTSovits.h  GPTSovits_c.h  TextNormalizer.h  TextNormalizerMap.h  config.h  exception.h  gpt_sovits.h  plog.h  symbols.h  text.h  tool.h  utils.h
include/GPTSovits/Bert/: CNBertModel.h  register.h
include/GPTSovits/G2P/: g2p.h  g2p_en.h  g2p_ja.h  g2p_ko.h  g2p_zh.h  polyphonic.h  symbols.h
include/GPTSovits/Text/: Coding.h  LangDetect.h  Sentence.h  TextNormalizerMap.h  Utils.h  tone_sandhi.h
include/GPTSovits/Text/TextNormalizer/: base.h  en.h  ja.h  ko.h  zh.h
include/GPTSovits/Utils/: Node.h  Stack.h  exception.h
res/: polyphonic.data
res/g2p/en/: en_pos_tagger.txt  homograph2features_en.json  namedict_en.json
src/: CNBertModel.cpp  GPTSovits.cpp  TextNormalizer.cpp  TextNormalizerMap.cpp  TextNormalizerMapFunc.cpp  audio_tools.cpp  config.cpp  pinyin_to_symbol_map.cpp  polyphonic.cpp  symbols.cpp  text.cpp  tone_sandhi.cpp  tool.cpp  utils.cpp
src/bert/: CNBertModel.cpp  cn.cpp  en.cpp  ja.cpp  register.cpp
src/export/: audio.cpp  bert.cpp  device.cpp  dllmain.cpp  export_define.h  global.cpp  global.h  gpt_sovits.cpp  gpt_sovits_cpp.def  sentence.cpp
src/g2p/: core.cpp  g2p_en.cpp  g2p_en1.cpp  g2p_ja.cpp  g2p_ko.cpp  g2p_openjtalk.cpp  g2p_zh.cpp  polyphonic.cpp  symbols.cpp  text.cpp
src/g2p/open_jtalk/: CMakeLists.txt
src/g2p/open_jtalk/jpcommon/: jpcommon.cpp  jpcommon.h  jpcommon_node.cpp
src/g2p/open_jtalk/mecab/src/: mmap.h
src/g2p/open_jtalk/njd2jpcommon/: njd2jpcommon.cpp
src/text/: Coding.cpp  LangDetect.cpp  Sentence.cpp  Utils.cpp  pinyin_to_symbol_map.cpp  tone_sandhi.cpp
src/text/TextNormalize/: TextNormalizerMap.cpp  TextNormalizerMapFunc.cpp  TextNormalizerMapFuncEN.cpp  TextNormalizerMapFuncZH.cpp  base.cpp  en.cpp  ja.cpp  ko.cpp  zh.cpp
test/: CMakeLists.txt
test/clean_text/: clean_text.cpp
test/cli/: gsv_cli.cpp
test/cli_async/: gsv_cli_async.cpp
test/cli_dll/: CMakeLists.txt  main.c
test/detect_list_lang/: detect_list_lang.cpp
test/g2p/: g2p.cpp
